--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,9 @@
 
 <body>
   <app-root></app-root>
+
+  <script src="/__/firebase/8.6.3/firebase-app.js"></script>
+  <script src="/__/firebase/init.js"></script>
 </body>
 
 </html>
